fix .callout on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ main {
 }
 
 .callout {
-  border: var(--primaryBorder);
+  border: 6px dotted var(--brandPrimary);
   text-align: center;
   margin: 0 30px;
   padding: 30px 15px;
@@ -200,6 +200,10 @@ footer {
     color: var(--brandPrimary);
     font-size: 14px;
     margin: 0 10px;
+  }
+
+  .callout {
+    width: 100%;
   }
 
   #hero h1,
